--- a/Werter.Dogs/Werter.Dogs.Servicos/Werter.Dogs.Servicos.csproj
+++ b/Werter.Dogs/Werter.Dogs.Servicos/Werter.Dogs.Servicos.csproj
@@ -5,11 +5,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="FluentValidation" Version="9.0.1" />
-  </ItemGroup>
-
-  <ItemGroup>
     <ProjectReference Include="..\Werter.Dogs.Compartilhado\Werter.Dogs.Compartilhado.csproj" />
+    <ProjectReference Include="..\Werter.Dogs.Dominio\Werter.Dogs.Dominio.csproj" />
   </ItemGroup>
 
 </Project>
