--- a/Werter.Dogs/Werter.Dogs.Tests/Werter.Dogs.Tests.csproj
+++ b/Werter.Dogs/Werter.Dogs.Tests/Werter.Dogs.Tests.csproj
@@ -8,13 +8,16 @@
 
   <ItemGroup>
     <PackageReference Include="FluentAssertions" Version="5.10.3" />
+    <PackageReference Include="NSubstitute" Version="4.2.2" />
     <PackageReference Include="nunit" Version="3.12.0" />
     <PackageReference Include="NUnit3TestAdapter" Version="3.15.1" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.4.0" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Werter.Dogs.Compartilhado\Werter.Dogs.Compartilhado.csproj" />
     <ProjectReference Include="..\Werter.Dogs.Dominio\Werter.Dogs.Dominio.csproj" />
+    <ProjectReference Include="..\Werter.Dogs.Servicos\Werter.Dogs.Servicos.csproj" />
   </ItemGroup>
 
 </Project>
