--- a/Werter.Dogs/Werter.Dogs.WebApi/appsettings.json
+++ b/Werter.Dogs/Werter.Dogs.WebApi/appsettings.json
@@ -1,4 +1,9 @@
 {
+  "TokenConfigurations": {
+    "Audience": "Exemplo",
+    "Issuer": "Exemplo",
+    "Seconds": 120
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
