Autenticação, autorização, token, foto

--- a/Werter.Dogs/Werter.Dogs.WebApi/appsettings.json
+++ b/Werter.Dogs/Werter.Dogs.WebApi/appsettings.json
@@ -2,7 +2,7 @@
   "TokenConfigurations": {
     "Audience": "Exemplo",
     "Issuer": "Exemplo",
-    "Seconds": 120
+    "Minutos": 1440
   },
   "Logging": {
     "LogLevel": {
