--- a/Werter.Dogs/Werter.Dogs.WebApi/appsettings.json
+++ b/Werter.Dogs/Werter.Dogs.WebApi/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConfiguracaoAplicacao": {
+    "DiretorioImagens": "/home/werter/Downloads/teste-upload"    
+  },
   "TokenConfigurations": {
     "Audience": "Exemplo",
     "Issuer": "Exemplo",
