--- a/Werter.Dogs/Werter.Dogs.Infra/Werter.Dogs.Infra.csproj
+++ b/Werter.Dogs/Werter.Dogs.Infra/Werter.Dogs.Infra.csproj
@@ -13,6 +13,8 @@
     </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools.DotNet" Version="2.0.3" />
     <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="3.1.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="3.1.6" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="3.1.6" />
   </ItemGroup>
 
   <ItemGroup>
