--- a/Werter.Dogs/Werter.Dogs.WebApi/Werter.Dogs.WebApi.csproj
+++ b/Werter.Dogs/Werter.Dogs.WebApi/Werter.Dogs.WebApi.csproj
@@ -12,6 +12,9 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.6" />
+    <PackageReference Include="MiniProfiler.AspNetCore" Version="4.2.1" />
+    <PackageReference Include="MiniProfiler.AspNetCore.Mvc" Version="4.2.1" />
+    <PackageReference Include="MiniProfiler.EntityFrameworkCore" Version="4.2.1" />
   </ItemGroup>
 
 
