--- a/Werter.Dogs/Werter.Dogs.Servicos/Werter.Dogs.Servicos.csproj
+++ b/Werter.Dogs/Werter.Dogs.Servicos/Werter.Dogs.Servicos.csproj
@@ -25,4 +25,8 @@
     <None Remove="Querys\Comentario\**" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.6" />
+  </ItemGroup>
+
 </Project>
