--- a/Werter.Dogs/Werter.Dogs.WebApi/appsettings.json
+++ b/Werter.Dogs/Werter.Dogs.WebApi/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConfiguracaoAplicacao": {
-    "DiretorioImagens": "/home/werter/Downloads/teste-upload"    
+    "DiretorioImagens": "/home/werter/Downloads/teste-upload",
+    "StringDeConexao": "Server=localhost,1433;Database=DB_Dogs;User Id=sa;Password=!007Dogs;"
   },
   "TokenConfigurations": {
     "Audience": "Exemplo",
