--- a/Docker/db/Dockerfile
+++ b/Docker/db/Dockerfile
@@ -1,8 +1,9 @@
-FROM mcr.microsoft.com/mssql/server:2019-latest
+FROM mcr.microsoft.com/mssql/server:2019-GA-ubuntu-16.04
 
 #docker run -e 'ACCEPT_EULA=Y' -e 'SA_PASSWORD=yourStrong(!)Password' -e 'MSSQL_PID=Express' -p 1433:1433 -d mcr.microsoft.com/mssql/server:2017-latest-ubuntu 
 
 ENV ACCEPT_EULA=Y
 ENV SA_PASSWORD=!123Dogs
 ENV MSSQL_PID=Express
+EXPOSE 1433
 
