--- a/Werter.Dogs/Werter.Dogs.WebApi/Properties/launchSettings.json
+++ b/Werter.Dogs/Werter.Dogs.WebApi/Properties/launchSettings.json
@@ -6,7 +6,7 @@
       "commandName": "Project",
       "launchBrowser": true,
       "launchUrl": "api/usuario",
-      "applicationUrl": "https://localhost:5001;http://localhost:5000",
+      "applicationUrl": "http://localhost:5001;http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
